[workspace]
members = [
    "bpf-basic",
    "kprobe",
    "ktracepoint",
    "ksym",
    "unikernel/*",
    "ksym-bin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Linfeng Chen <chenlinfeng25@outlook.com>"]
keywords = ["kprobe", "tracepoint", "kernel"]
categories = ["os", "no-std"]
license-file = "LICENSE"
homepage = "https://github.com/Godones/ext_ebpf"
repository = "https://github.com/Godones/ext_ebpf"

[workspace.dependencies]
aya-obj = { git = "https://github.com/Godones/aya.git", branch = "dev" }
aya = { git = "https://github.com/Godones/aya.git", branch = "dev", default-features = false }
