[package]
name = "kprobe"
authors.workspace = true
version.workspace = true
edition = "2024"

[dependencies]
log = "0.4.21"
lock_api = "0.4"
cfg-if = "1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
yaxpeax-x86 = { version = "2", default-features = false, features = ["fmt"] }
yaxpeax-arch = { version = "0.3", default-features = false }

[dev-dependencies]
spin = "0.10"
