[package]
name = "ksym-bin"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A Rust crate for generating kernel symbol tables (ksyms) from kernel binaries."

[dependencies]
rustc-demangle = { version = "0.1", optional = true }
log = "0.4"

[features]
demangle = ["dep:rustc-demangle"]
assembly = []

[[bin]]
name = "gen_ksym"
required-features = ["demangle"]
