[package]
name = "ksym"
version.workspace = true
edition.workspace = true
authors.workspace = true


[dependencies]
rustc-demangle = { version = "0.1", optional = true }
lazyinit = "0.2"

[features]
demangle = ["dep:rustc-demangle"]
assembly = []

[[bin]]
name = "gen_ksym"
required-features = ["demangle"]

[[bin]]
name = "gen_ksym_as"
required-features = ["demangle"]
