[package]
name = "tracepoint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A Rust crate for implementing tracepoints in operating systems."

[dependencies]
static-keys = "0.8"
paste = "1.0"
log = "0.4"
lock_api = "0.4"

[dev-dependencies]
spin = "0.10"
env_logger = "0.11"
libc = { version = "0.2", default-features = false }
clear-cache = "0.1"
